--- a/style.css
+++ b/style.css
@@ -1,44 +1,42 @@
-	.card {
-		width: 500px;
-		height: fit-content;
-		background-color: aliceblue;
-		border-radius: 25px;
-		border: solid 2px navy;
-		margin: 20px;
-		padding: 40px;
-	}
+.card {
+    width: 500px;
+    height: fit-content;
+    background-color: aliceblue;
+    border-radius: 25px;
+    border: solid 2px navy;
+    margin: 20px;
+    padding: 40px;
+}
 
-	.border {
-		width: 100px;
-		height: 100px;
-		border-radius: 50%;
-		margin-bottom: 50px;
-	}
+.border {
 
-	.title {
-		font-family: monospace;
-		font-size: 30px;
-	}
+    border-radius: 20px;
+}
 
-	.main-color {
-		color: navy;
-	}
+.title {
+    font-family: Arial;
+    font-size: 30px;
+    font-style: italic;
+}
 
-	.text {
-		font-family: monospace;
-		font-size: 15px;
-	}
+.main-color {
+    color: navy;
+}
 
-	.icone1 {
-		width: 100px;
-		height: 100px;
-		background-image: url('https://cdn-icons-png.flaticon.com/512/706/706830.png');
-		background-size: cover;
-	}
+.text {
+    font-family: Arial;
+    font-size: 15px;
+}
 
-	.icone2 {
-		width: 100px;
-		height: 100px;
-		background-image: url('https://cdn-icons-png.flaticon.com/256/3681/3681928.png');
-		background-size: cover;
-	}
+.icone1 {
+    width: 100px;
+    height: 100px;
+    background-image: url('https://cdn-icons-png.flaticon.com/512/706/706830.png');
+    background-size: cover;
+}
+.icone2{
+    width: 100px;
+    height: 100px;
+    background-image: url('https://cdn-icons-png.flaticon.com/256/3681/3681928.png');
+    background-size: cover;
+}
